GNOME Bugzilla – Bug 777239
decklink: elements are limited to a maximum of 16 devices
Last modified: 2018-02-14 15:10:51 UTC
In the element Maximum number of decklink supported devices is hardcoded to just 10 devices. We had a conversation with Black Magic and according to them there is no fixed limitation for that (so there should be no limit on their side). Many PC motherboards now are able support 6 decklink cards each with up to 8 inputs so we made this patch to raise this limit to 48 and tested it with one of our systems. Hopefully we can raise this limit in upstream release so everyone can use it.
Created attachment 343457 [details] [review] This patch raises the maximum number of supported devices from 10 to 48
Comment on attachment 343457 [details] [review] This patch raises the maximum number of supported devices from 10 to 48 I'd rather make it unlimited and instead of using a static sized array of Devices, just use a (dynamically growing) GArray. Then we won't ever have to increase the limit again in the future
Reza, do you want to update the patch accordingly?
Created attachment 367289 [details] [review] decklink: don't limit number of devices to 16
(Patch was not tested with actual hardware fwiw, but it compiles!)
Author: Tim-Philipp Müller <tim@centricular.com> Date: Tue Jan 23 10:27:57 2018 +0000 decklink: don't limit number of devices to 16 There is no fixed limitation for the number of devices on the decklink API side according to BlackMagic. Many PC motherboards are able support 6 decklink cards each with up to 8 inputs so a limit of 16 might well be too low. https://bugzilla.gnome.org/show_bug.cgi?id=777239
Reopening, this causes segfaults on video sources ...
Do you have a stack trace? There was a follow-up fix as well fwiw.
commit 2a40ab6ad660c37b22e82991696d0c40e70da79b Author: Tim-Philipp Müller <tim@centricular.com> Date: Tue Jan 23 14:49:51 2018 +0000 decklink: don't crash if there are no decklink devices Fixes generic/states check.
Created attachment 368345 [details] [review] decklink: Fix array of devices usage We need to allocate actual Device structures since we are going to be setting callbacks with address to that structure
commit b3ca3e977cefa7921e777f1b45054c3326598e2b (HEAD -> master, origin/master, origin/HEAD) Author: Edward Hervey <edward@centricular.com> Date: Wed Feb 14 15:57:48 2018 +0100 decklink: Fix array of devices usage We need to allocate actual Device structures since we are going to be setting callbacks with address to that structure https://bugzilla.gnome.org/show_bug.cgi?id=777239